--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
-- name: Sets Consul arch -> linux_amd64
+- name: Sets Package Arch -> linux_amd64
   set_fact:
     arch: linux_amd64
   when: ansible_system == "Linux"
 
-- name: Sets Consul arch -> darwin_amd64
+- name: Sets Package Arch -> darwin_amd64
   set_fact:
     arch: darwin_amd64
   when: ansible_system == "Darwin"
@@ -23,7 +23,6 @@
     - hashicorp
     - install
     - download
-
 
 - name: Unpacks to location
   unarchive: >
@@ -54,3 +53,5 @@
     - install
     - cleanup
 
+- include: consul.yml
+- include: nomad.yml
