--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,7 +7,9 @@
   service: name=consul state=restarted
 
 - name: restart dnsmasq
+  sudo: yes
   service: name=dnsmasq state=restarted
 
 - name: restart NGINX
+  sudo: yes
   service: name=nginx state=restarted
