--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -197,10 +197,33 @@
 - name: Adds NGINX Virtual host
   template:
     src="../templates/nginx-consul.j2"
-    dest="/etc/nginx/sites-enabled/consul"
+    dest="/etc/nginx/sites-available/consul"
   sudo: yes
   tags:
     - consul
     - install
     - config
+    - nginx
 
+- name: Configure NGINX
+  template:
+    src="../templates/nginx.conf.j2"
+    dest="/etc/nginx/nginx.conf"
+  sudo: yes
+  tags:
+    - consul
+    - install
+    - nginx
+
+- name: Enable Consul VHost
+  file:
+    src="/etc/nginx/sites-available/consul"
+    dest="/etc/nginx/sites-enabled/consul"
+    state=link
+    force=yes
+  sudo: yes
+  tags:
+    - ui
+    - consul
+    - install
+    - nginx
