--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,65 +1,13 @@
 ---
-<<<<<<< HEAD
-- name: Setting variable arch := linux_amd64
-=======
-- name: Sets Package Arch -> linux_amd64
->>>>>>> 90b704fcee1946490fc07d383f2d6d3a7a5f90b5
-  set_fact:
-    arch: linux_amd64
-  when: ansible_system == "Linux"
-
-<<<<<<< HEAD
-- name: Setting variable arch := darwin_amd64
-=======
-- name: Sets Package Arch -> darwin_amd64
->>>>>>> 90b704fcee1946490fc07d383f2d6d3a7a5f90b5
-  set_fact:
-    arch: darwin_amd64
-  when: ansible_system == "Darwin"
-
-- name: Downloads Packages
-  get_url: >
-    url={{ download_location }}/{{ item.name }}/{{ item.version }}/{{ item.name }}_{{ item.version }}_{{ arch }}.zip
-    dest="{{ install_dir }}"
-    mode=0755
-    validate_certs=no
-  sudo: yes
-  when: item.state == 'present'
-  with_items:
-    - "{{ hashicorp.apps }}"
+- include: base.yml
   tags:
-    - hashicorp
-    - install
-    - download
-
-- name: Unpacks to location
-  unarchive: >
-    src={{ install_dir }}/{{ item.name }}_{{ item.version }}_{{ arch }}.zip
-    dest={{ install_dir }}
-    copy=no
-    mode=755
-    owner=root
-    group=staff
-  sudo: yes
-  when: item.state == 'present'
-  with_items:
-    - "{{ hashicorp.apps }}"
-  tags:
-    - hashicorp
-    - install
-    - unpack
-
-
-- name: Cleans up mess
-  file:
-    path={{ install_dir }}/{{ item.name }}_{{ item.version }}_{{ arch }}.zip
-    state=absent
-  with_items:
-    - "{{ hashicorp.apps }}"
-  tags:
-    - hashicorp
-    - install
-    - cleanup
+    - base
+    - apt
 
 - include: consul.yml
+  tags:
+    - consul
+
 - include: nomad.yml
+  tags:
+    - nomad
