--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,76 +14,17 @@ hashicorp:
       version: 0.4.0
     - name: otto
       state: absent
-      version: 0.1.2
+      version: 0.2.0
     - name: packer
       state: absent
       version: 0.8.6
     - name: terraform
       state: absent
-      version: 0.6.8
+      version: 0.6.10
     - name: consul
       state: absent
-      version: 0.6.0
-
-dnsmasq:
-  config_file: "/etc/dnsmasq.d/10-consul"
-
-consul:
-  install:
-    dir : "/usr/local/bin"
-    download_location: "https://releases.hashicorp.com/consul"
-    force_download: "{{ consul_force_download | default(false) }}"
-    file_list:
-      - "consul"
-  datacenter: "{{ consul_datacenter | default('dc1') }}"
-  bootstrap_expect: "{{ consul_bootstrap_expect | default('1') }}"
-  group: "{{ consul_group | default('consul') }}"
-  iface: "{{ consul_iface | default('eth0') }}"
-  ip: "{{ consul_ip | default('127.0.0.1') }}"
-  log_level: "{{ consul_log_level | default('info') }}"
-  port: "{{ consul_port | default(8600) }}"
-  suffix: "{{ consul_suffix | default('consul') }}"
-  ui_dir: "{{ consul_ui_dir | default( '/var/consul/ui' ) }}"
-  uid: "{{ consul_uid | default(1050) }}"
-  user: "{{ consul_user | default('consul') }}"
-  version: "{{ consul_version }}"
-  encrypt_key: "{{ consul_encrypt_key }}"
-  dirs:
-    - "/etc/consul.d"
-    - "/var/consul/data"
-    - "/var/consul/ui_src"
-  config:
-    dir: "/etc/consul.d"
-    service_file: "{{ consul_config_service_file | default('/etc/init/consul.conf') }}"
-  data_dir: "{{ consul_data_dir | default('/var/consul/data') }}"
-
-
-
-nomad:
-  user: root
-  group: root
-  datacenter: "{{ nomad_datacenter | default('dc1') }}"
-  bootstrap_expect: "{{ nomad_bootstrap_expect | default('1') }}"
-  iface: "{{ nomad_iface | default('eth0') }}"
-  log_level: "{{ nomad_log_level | default('info') }}"
-  dirs:
-    - "/etc/nomad.d"
-  config:
-    dir: "/etc/nomad.d"
-    service_file: "{{ nomad_config_service_file | default('/etc/init/nomad.conf') }}"
-  data_dir: "{{ nomad_data_dir | default('/var/nomad/data') }}"
-  
-vault:
-  user: root
-  group: root
-  datacenter: "{{ vault_datacenter | default('dc1') }}"
-  bootstrap_expect: "{{ vault_bootstrap_expect | default('1') }}"
-  iface: "{{ vault_iface | default('eth0') }}"
-  log_level: "{{ vault_log_level | default('info') }}"
-  dirs:
-    - "/etc/vault.d"
-  config:
-    dir: "/etc/vault.d"
-    service_file: "{{ vault_config_service_file | default('/etc/init/vault.conf') }}"
-  data_dir: "{{ vault_data_dir | default('/var/vault/data') }}"
+      version: 0.6.3
+    - name: consul-template
+      state: absent
+      version: 0.12.2
 
